updated godocs (swagger)
