# src/docs/swagger.json
@@ -9,7 +9,7 @@
     "paths": {
         "/enclosure": {
             "get": {
-                "description": "get string by ID",
+                "description": "Returns the whole enclosure",
                 "consumes": [
                     "application/json"
                 ],
@@ -19,7 +19,7 @@
                 "tags": [
                     "enclosure"
                 ],
-                "summary": "returns whole enclosure",
+                "summary": "Get enclosure",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -32,7 +32,7 @@
         },
         "/{boxId}/fans/{fanId}": {
             "get": {
-                "description": "get fan by box- and fan-id",
+                "description": "Retrieve a fan object by its ID and the ID of the box it belongs to",
                 "consumes": [
                     "application/json"
                 ],
@@ -42,17 +42,17 @@
                 "tags": [
                     "fan"
                 ],
-                "summary": "returns fan",
+                "summary": "Get fan",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "Box ID",
                         "name": "boxId",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "Fan ID",
                         "name": "fanId",
                         "in": "path",
@@ -65,11 +65,17 @@
                         "schema": {
                             "$ref": "#/definitions/model.Fan"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             },
             "post": {
-                "description": "get fan by box- and fan-id",
+                "description": "Update a fan object by its ID and the ID of the box it belongs to",
                 "consumes": [
                     "application/json"
                 ],
@@ -79,11 +85,25 @@
                 "tags": [
                     "fan"
                 ],
-                "summary": "updates fan",
+                "summary": "Update fan",
                 "parameters": [
                     {
-                        "description": "body",
-                        "name": "request",
+                        "type": "integer",
+                        "description": "Box ID",
+                        "name": "boxId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Fan ID",
+                        "name": "fanId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Fan object",
+                        "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -97,13 +117,19 @@
                         "schema": {
                             "$ref": "#/definitions/model.Fan"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
         },
         "/{boxId}/lights/{lightId}": {
             "get": {
-                "description": "get light by box- and light-id",
+                "description": "Get information about a specific light in a specific box",
                 "consumes": [
                     "application/json"
                 ],
@@ -113,7 +139,7 @@
                 "tags": [
                     "light"
                 ],
-                "summary": "returns light",
+                "summary": "Get light",
                 "parameters": [
                     {
                         "type": "string",
@@ -136,11 +162,17 @@
                         "schema": {
                             "$ref": "#/definitions/model.Light"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             },
             "post": {
-                "description": "get light by box- and light-id",
+                "description": "Update the level of a specific light in a specific box",
                 "consumes": [
                     "application/json"
                 ],
@@ -150,10 +182,24 @@
                 "tags": [
                     "light"
                 ],
-                "summary": "updates light",
+                "summary": "Update light",
                 "parameters": [
                     {
-                        "description": "body",
+                        "type": "string",
+                        "description": "Box ID",
+                        "name": "boxId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Light ID",
+                        "name": "lightId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Light object",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -168,13 +214,19 @@
                         "schema": {
                             "$ref": "#/definitions/model.Light"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
         },
         "/{boxId}/sensors/{sensorId}": {
             "get": {
-                "description": "get sensor by box- and sensor-id",
+                "description": "Get a sensor by its box and sensor ID.",
                 "consumes": [
                     "application/json"
                 ],
@@ -184,7 +236,7 @@
                 "tags": [
                     "sensor"
                 ],
-                "summary": "returns sensor",
+                "summary": "Get Sensor",
                 "parameters": [
                     {
                         "type": "string",
@@ -207,13 +259,19 @@
                         "schema": {
                             "$ref": "#/definitions/model.Sensor"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
         },
         "/{boxId}/sensors/{sensorId}/data": {
             "get": {
-                "description": "get sensor-data as time-series by box- and sensor-id",
+                "description": "Get time-series data for a sensor by its box and sensor ID.",
                 "consumes": [
                     "application/json"
                 ],
@@ -223,7 +281,7 @@
                 "tags": [
                     "sensor"
                 ],
-                "summary": "returns sensor-data as time-series",
+                "summary": "Get Sensor Data",
                 "parameters": [
                     {
                         "type": "string",
@@ -245,6 +303,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.TimeSeries"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
